# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: all_tests.yml
gendiff/: __init__.py  arg_pars_for_gendiff.py  cli.py  file_parser.py  gen_diff.py  gendiff.py  stylish.py
gendiff/formater/: apply_format.py  json_format.py  plain.py  reformatting.py  serialize.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_diff_json.py  test_diff_plain.py  test_diff_stylish.py
tests/fixtures/: 1.json  1.yaml  2.json  2.yml  empaty_json_format.json  right_answer  right_answer_json.json  right_answer_yml
