[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Barzabel <kochenko1995@mail.ru>"]
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "3.9.13"
pathlib = "^1.0.1"
PyYAML = "^6.0.1"

[tool.poetry.dev-dependencies]
argparse = "^1.4.0"
flake8 = "^3.9.2"
pytest = "^6.2.5"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
